--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background: linear-gradient(#13a52e 0%, #041832 33.33%, #041832 66.67%, #01080E 100%);
+    background: linear-gradient(#13a52e 0%, #0d7420 33.33%, #095517 66.67%, #073e11 100%);
     height: 100vh;
     display: flex;
     align-items: center;
